--- a/src/www/style.css
+++ b/src/www/style.css
@@ -158,3 +158,7 @@ input[type="checkbox"] {
     width: 100%;
     height: 100%;
 }
+
+.graphPage .rightPart .lineChart {
+    background-color: #fff;
+}
