--- a/src/www/style.css
+++ b/src/www/style.css
@@ -78,6 +78,22 @@ input[type="checkbox"] {
     font-size: 0.75em;
 }
 
+.toggle div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.toggle div span {
+    font-size: 0.5em;
+    color: #ccc;
+}
+
+.toggle div button {
+    margin: 0 0.25em;
+}
+
 .toggle button {
     position: relative;
     height: 1em;
