--- a/src/www/style.css
+++ b/src/www/style.css
@@ -153,6 +153,24 @@ input[type="checkbox"] {
     padding: 0.25em 0.5em;
 }
 
+.list label {
+    font-size: 0.75em;
+    color: #888;
+}
+
+.list .body {
+    display: flex;
+    font-size: 0.75em;
+    flex-wrap: wrap;
+}
+
+.list .body .item {
+    background-color: #ccc;
+    border-radius: 1em/50%;
+    padding: 0.25em 0.75em;
+    margin: 0.25em;
+}
+
 .graphPage {
     display: flex;
     flex-direction: row;
