--- a/src/www/style.css
+++ b/src/www/style.css
@@ -185,6 +185,7 @@ input[type="checkbox"] {
 
 .graphPage .rightPart {
     flex-grow: 1;
+    min-width: 16em;
 }
 
 .graphPage .rightPart.threeJsView {
