--- a/src/www/style.css
+++ b/src/www/style.css
@@ -201,6 +201,7 @@ input[type="checkbox"] {
     background-color: #fff;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .graphPage .rightPart canvas {
